[gd_scene load_steps=6 format=3 uid="uid://dif06p24aem6y"]

[ext_resource type="Script" uid="uid://b3ix61c4jmc6l" path="res://Main/scripts/centry.gd" id="1_rbgx2"]
[ext_resource type="Texture2D" uid="uid://drqsboaym2pth" path="res://Main/sprites/based.png" id="2_rbgx2"]
[ext_resource type="AudioStream" uid="uid://dqgh0tyyyv1i2" path="res://assets/Sounds/SDshot-001.ogg" id="3_pes3u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rbgx2"]
radius = 209.022

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d3hdo"]
random_pitch = 1.45
random_volume_offset_db = 1.58
streams_count = 1
stream_0/stream = ExtResource("3_pes3u")

[node name="centry1" type="Node2D"]
script = ExtResource("1_rbgx2")
damage = 11

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_rbgx2")
debug_color = Color(0, 0.6, 0.701961, 0.0431373)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="Based" type="Sprite2D" parent="."]
position = Vector2(0, -19)
scale = Vector2(2.5, 2.8125)
texture = ExtResource("2_rbgx2")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_d3hdo")
volume_db = -4.312

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
